syntax = "proto3";

package order.middleware.payment.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/order/middleware/v1/payment";

import "basetypes/v1/conds.proto";
import "basetypes/order/v1/enums.proto";

message PaymentReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional basetypes.order.v1.PaymentObseleteState ObseleteState = 30;
    repeated PaymentTransferReq PaymentTransfers = 40;
}

message Payment {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"user_id"
    string UserID = 40;
    // @inject_tag: sql:"order_id"
    string OrderID = 50;
    // @inject_tag: sql:"obselete_state"
    string ObseleteStateStr = 60;
    basetypes.order.v1.PaymentObseleteState ObseleteState = 70;
    // @inject_tag: sql:"ledger_lock_id"
    string LedgerLockID = 80;

    repeated PaymentBalanceInfo PaymentBalances = 100;
    repeated PaymentTransferInfo PaymentTransfers = 110;
    repeated PaymentFiatInfo PaymentFiats = 120;

    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 1010;
}

message Conds {
    optional basetypes.v1.Uint32Val ObseleteState = 10;
}

message PaymentBalanceReq {
    optional string CoinTypeID = 10;
    optional string Amount = 20;
    optional string CoinUSDCurrency = 30;
    optional string LocalCoinUSDCurrency = 40;
    optional string LiveCoinUSDCurrency = 50;
}

message PaymentBalanceInfo {
    // @inject_tag: sql:"ent_id"
    string EntID = 10;
    // @inject_tag: sql:"payment_id"
    string PaymentID = 20;
    // @inject_tag: sql:"coin_type_id"
    string CoinTypeID = 30;
    // @inject_tag: sql:"amount"
    string Amount = 40;
    // @inject_tag: sql:"coin_usd_currency"
    string CoinUSDCurrency = 50;
    // @inject_tag: sql:"local_coin_usd_currency"
    string LocalCoinUSDCurrency = 60;
    // @inject_tag: sql:"live_coin_usd_currency"
    string LiveCoinUSDCurrency = 70;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 80;
}

message PaymentContractReq {
    optional string CoinTypeID = 10;
    optional string Amount = 20;
}

message PaymentContractInfo {
    // @inject_tag: sql:"payment_id"
    string PaymentID = 10;
    // @inject_tag: sql:"coin_type_id"
    string CoinTypeID = 20;
    // @inject_tag: sql:"amount"
    string Amount = 30;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 40;
}

message PaymentTransferReq {
    optional string EntID = 10;
    optional string CoinTypeID = 20;
    optional string Amount = 30;
    optional string AccountID = 40;
    optional string StartAmount = 50;
    optional string CoinUSDCurrency = 60;
    optional string LocalCoinUSDCurrency = 70;
    optional string LiveCoinUSDCurrency = 80;
    optional string FinishAmount = 90;
}

message PaymentTransferInfo {
    // @inject_tag: sql:"ent_id"
    string EntID = 10;
    // @inject_tag: sql:"payment_id"
    string PaymentID = 20;
    // @inject_tag: sql:"coin_type_id"
    string CoinTypeID = 30;
    // @inject_tag: sql:"amount"
    string Amount = 40;
    // @inject_tag: sql:"account_id"
    string AccountID = 50;
    // @inject_tag: sql:"start_amount"
    string StartAmount = 60;
    // @inject_tag: sql:"coin_usd_currency"
    string CoinUSDCurrency = 70;
    // @inject_tag: sql:"local_coin_usd_currency"
    string LocalCoinUSDCurrency = 80;
    // @inject_tag: sql:"live_coin_usd_currency"
    string LiveCoinUSDCurrency = 90;
    // @inject_tag: sql:"finish_amount"
    string FinishAmount = 100;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 110;
}

message PaymentFiatReq {
    optional string EntID = 10;
    optional string FiatID = 20;
    optional basetypes.order.v1.FiatPaymentChannel PaymentChannel = 30;
    optional string Amount = 40;
    optional string ChannelPaymentID = 50;
    optional string USDCurrency = 60;
}

message PaymentFiatInfo {
    // @inject_tag: sql:"ent_id"
    string EntID = 10;
    // @inject_tag: sql:"payment_id"
    string PaymentID = 20;
    // @inject_tag: sql:"fiat_id"
    string FiatID = 30;
    // @inject_tag: sql:"payment_channel"
    string PaymentChannelStr = 40;
    basetypes.order.v1.FiatPaymentChannel PaymentChannel = 41;
    // @inject_tag: sql:"amount"
    string Amount = 50;
    // @inject_tag: sql:"usd_currency"
    string USDCurrency = 60;
    // @inject_tag: sql:"channel_payment_id"
    string ChannelPaymentID = 70;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 200;
}
